fixed li on doc browns page / fixed spacing on single blog posts

--- a/_sass/_blog-page.scss
+++ b/_sass/_blog-page.scss
@@ -37,6 +37,15 @@
 .post-center {
     max-width: 550px;
     margin: 0 auto;
+    article {
+        h2{
+            margin-bottom: 10px;
+
+        }
+        p {
+            margin-bottom: 20px;
+        }
+    }
 }
 
 .meta-style {
